sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:112: error: ';' expected but ',' found.
  return index/2, index%2
                ^